# chatgptyardage

./: CMakeLists.txt
include/physics/: physics.h  trajectory.h  wind.h
src/physics/: physics.cpp  trajectory.cpp  wind.cpp
